--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd frontend && yarn install",
-    "dev": "cd frontend && yarn dev",
+    "postinstall": "cd frontend-starecom && yarn install",
+    "dev": "cd frontend-starecom && yarn dev",
     "build": "cd frontend-starecom && yarn build"
   },
   "keywords": [],
